# somacaller

./: README.md  setup.cfg  somacaller.ipynb
somacaller/: __main__.py  model.py
tests/: test_model.py
