[metadata]
name = somacaller
version = attr: somacaller.__version__
description = A tool to predict circulating tumoral allele frequency
long_description = file: README.md
long_description_content_type = text/markdown
author = Sacha Schutz
author_email = sacha@labsquare.org
url = https://github.com/dridk/somacaller
license = GPL
keywords = GUI, health
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = somacaller
install_requires =
    pandas>=1.0.1
    numpy>=1.18.1
    scikit-learn>=0.22.1
    matplotlib>=3.1.2

[options.extras_require]
dev =
    pytest-cov==2.6.1
    pytest==4.0.1
    pytest-runner

[options.entry_points]
console_scripts =
    somacaller = somacaller.__main__

[zest.releaser]
create-wheel = yes
python-file-with-version = somacaller/__init__.py

[aliases]
test=pytest